; ModuleID = '/home/carl/AnghaBench/esp-idf/components/app_update/test/extr_test_switch_ota.c_app_update.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/app_update/test/extr_test_switch_ota.c_app_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OTA_SIZE_UNKNOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @app_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @app_update() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = call i32* (...) @get_running_firmware()
  store i32* %4, i32** %1, align 8
  %5 = call i32* @esp_ota_get_next_update_partition(i32* null)
  store i32* %5, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @TEST_ASSERT_NOT_NULL(i32* %6)
  store i32 0, i32* %3, align 4
  %8 = load i32*, i32** %2, align 8
  %9 = load i32, i32* @OTA_SIZE_UNKNOWN, align 4
  %10 = call i32 @esp_ota_begin(i32* %8, i32 %9, i32* %3)
  %11 = call i32 @TEST_ESP_OK(i32 %10)
  %12 = load i32, i32* %3, align 4
  %13 = load i32*, i32** %1, align 8
  %14 = call i32 @copy_app_partition(i32 %12, i32* %13)
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @esp_ota_end(i32 %15)
  %17 = call i32 @TEST_ESP_OK(i32 %16)
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @esp_ota_set_boot_partition(i32* %18)
  %20 = call i32 @TEST_ESP_OK(i32 %19)
  %21 = load i32*, i32** %2, align 8
  ret i32* %21
}

declare dso_local i32* @get_running_firmware(...) #1

declare dso_local i32* @esp_ota_get_next_update_partition(i32*) #1

declare dso_local i32 @TEST_ASSERT_NOT_NULL(i32*) #1

declare dso_local i32 @TEST_ESP_OK(i32) #1

declare dso_local i32 @esp_ota_begin(i32*, i32, i32*) #1

declare dso_local i32 @copy_app_partition(i32, i32*) #1

declare dso_local i32 @esp_ota_end(i32) #1

declare dso_local i32 @esp_ota_set_boot_partition(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
